<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_book"
        android:icon="@drawable/ic_baseline_book_24"
        android:title="@string/title_book"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_pets"
        android:icon="@drawable/ic_baseline_pets_24"
        android:title="@string/title_pets"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile"
        app:showAsAction="always"/>


</menu>